--- a/src/sharedComponent/dashboard/Dashboard.css
+++ b/src/sharedComponent/dashboard/Dashboard.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     grid-template-columns: 0.6fr 1fr 1fr 1fr;
-    grid-template-rows: 0.6fr 1fr 1fr 1fr;
+    /* grid-template-rows:  1fr 1fr 1fr; */
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
